Add developer option 'reboot' to Global Actions menu (1/2)
Adds a new developer option to enable a reboot option in the
global actions menu

Conflicts:
	core/res/res/values/strings.xml
	core/res/res/values/symbols.xml
	services/core/java/com/android/server/policy/GlobalActions.java
	services/core/java/com/android/server/power/ShutdownThread.java

Change-Id: I0cdc80eb44b8d42f4d30007d6c03dfc2cd24e7d4

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2392,4 +2392,9 @@
   <java-symbol type="array" name="origin_carrier_names" />
   <java-symbol type="array" name="locale_carrier_names" />
 
+  <java-symbol type="drawable" name="ic_lock_reboot" />
+  <java-symbol type="string" name="reboot_confirm" />
+  <java-symbol type="string" name="reboot_title" />
+  <java-symbol type="string" name="global_action_reboot" />
+
 </resources>
