--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1978,6 +1978,7 @@
          -->
     <string-array translatable="false" name="config_globalActionsList">
         <item>power</item>
+        <item>reboot</item>
         <item>bugreport</item>
         <item>users</item>
     </string-array>
