--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2368,4 +2368,7 @@
     <string name="config_rat_2g" translatable="false">2G</string>
     <string name="config_rat_3g" translatable="false">3G</string>
     <string name="config_rat_4g" translatable="false">4G</string>
+
+    <!-- Boolean to enable stk functionality on Samsung phones -->
+    <bool name="config_samsung_stk">false</bool>
 </resources>
