policy: launch camera by multiple key press
Inspired from Nexus 5X,6P and Samsung Galaxy series feature

Bug: https://code.google.com/p/android/issues/detail?id=190248
Signed-off-by: Young-Ho Cha <ganadist@gmail.com>

Conflicts:
	services/core/java/com/android/server/policy/PhoneWindowManager.java

Change-Id: I33579c34efe0360a92ab6098d7030257fb4b3397

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -735,6 +735,7 @@
             0 - Nothing
             1 - Toggle theater mode setting
             2 - Brightness boost
+            3 - Launch Camera
     -->
     <integer name="config_doublePressOnPowerBehavior">0</integer>
 
@@ -742,6 +743,7 @@
             0 - Nothing
             1 - Toggle theater mode setting
             2 - Brightness boost
+            3 - Launch Camera
     -->
     <integer name="config_triplePressOnPowerBehavior">0</integer>
 
@@ -926,6 +928,7 @@
     <!-- Control the behavior when the user double-taps the home button.
             0 - Nothing
             1 - Recent apps view in SystemUI
+            2 - Launch Camera
          This needs to match the constants in
          policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
     -->
