[1/2] Base: Nav ring Tasker integration
User can now set a custom Tasker action to nav ring target

Change-Id: Icb2d0c8a51491beee9e13d81fee097321ae3f12a

--- a/core/res/res/values/slim_strings.xml
+++ b/core/res/res/values/slim_strings.xml
@@ -201,4 +201,9 @@
     <!-- [CHAR LIMIT=NONE] Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
     <string name="permdesc_changePhoneBlacklist">Allows an app to change the phone numbers that are blocked for incoming calls or messages.</string>
 
+    <!-- Tasker integration strings -->
+    <string name="tasker_not_installed">Tasker is not installed</string>
+    <string name="tasker_not_enabled">Tasker is disabled</string>
+    <string name="tasker_no_external_access">External access to Tasker is disabled</string>
+
 </resources>
